--- a/css/styles.css
+++ b/css/styles.css
@@ -10850,3 +10850,22 @@ textarea.form-control-lg {
 .services-dropdown:focus-within .services-list {
     display: block;
 }
+/* Snowfall container styles */
+#snowfall-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: 1000;
+}
+
+/* Snowflake styles */
+.snowflake {
+    position: absolute;
+    background: #fff; /* Snowflake color */
+    border-radius: 50%;
+    pointer-events: none;
+}
+
