--- a/css/styles.css
+++ b/css/styles.css
@@ -10850,3 +10850,67 @@ textarea.form-control-lg {
 .services-dropdown:focus-within .services-list {
     display: block;
 }
+*,*:after,*:before{
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+}
+body{
+  font-family: arial;
+  font-size: 16px;
+  margin: 0;
+  background: #fff;
+  color: #000;
+}
+
+.snow,
+.snow:before,
+.snow:after {
+  position: absolute;
+  top: -650px;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-image: 
+    radial-gradient(20px 20px at 100px 50px, #fff , transparent), 
+    radial-gradient(5px 5px at 200px 150px, #fff, transparent), 
+    radial-gradient(10px 10px at 300px 250px, #fff 50%, transparent), 
+    radial-gradient(20px 20px at 400px 350px, #fff 50%, transparent), 
+    radial-gradient(10px 10px at 500px 100px, #fff 50%, transparent), 
+    radial-gradient(30px 30px at 50px 200px, #fff 50%, transparent), 
+    radial-gradient(30px 30px at 150px 300px, #fff 50%, transparent), 
+    radial-gradient(20px 20px at 250px 400px, #fff 50%, transparent), 
+    radial-gradient(10px 10px at 350px 500px, #fff 50%, transparent);
+  background-size: 650px 650px;
+  animation: snow 3s linear infinite;
+  content: "";
+  pointer-events: none; /* Make the snow elements non-interactive */
+}
+
+.snow:after,
+.snow:before {
+  pointer-events: none; /* Make the pseudo-elements non-interactive */
+}
+
+.snow:after {
+  margin-left: -250px;
+  opacity: 0.7;
+  filter: blur(1px);
+  animation-duration: 4s;
+  animation-direction: reverse;
+}
+
+.snow:before {
+  margin-left: -350px;
+  opacity: 0.9;
+  filter: blur(0.5px);
+  animation-duration: 6s;
+  animation-direction: reverse;
+}
+
+@keyframes snow {
+  to {
+    transform: translateY(650px);
+  }
+}
