--- a/css/styles.css
+++ b/css/styles.css
@@ -10919,3 +10919,38 @@ body{
     list-style-type: none;
     padding-left: 0; /* Optional: Remove left padding */
 }
+/* Match existing style with your theme or layout */
+.linkedin-button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #0077B5; /* LinkedIn blue color */
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    margin-top: 10px; /* Adjust margin as needed */
+    /* Use the same font and styling as other buttons */
+    font-family: inherit;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.linkedin-button:hover {
+    background-color: #005582;
+}
+.background-container {
+    background-image: url('./images/PHARPRO.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat; /* Ensures the image doesn't repeat */
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    -webkit-backface-visibility: hidden; /* Smoothens the image on some browsers */
+    -webkit-transform: translateZ(0); /* Improves rendering on some devices */
+    image-rendering: -webkit-optimize-contrast; /* Helps in enhancing the quality */
+}
